Added get category by id and slug, and get company by slug. Fixed some issues with symfony's event listener priorities
