# src/Company/Infrastructure/Controller/GetCompanyBySlugController.php
@@ -6,16 +6,17 @@ namespace App\Company\Infrastructure\Controller;
 
 use App\Company\Application\Query\GetCompanyById\GetCompanyByIdQuery;
 use App\Company\Application\Query\GetCompanyById\GetCompanyByIdQueryResult;
+use App\Company\Application\Query\GetCompanyBySlug\GetCompanyBySlugQuery;
+use App\Company\Application\Query\GetCompanyBySlug\GetCompanyBySlugQueryResult;
 use App\Company\Infrastructure\Request\GetCompanyByIdDto;
+use App\Company\Infrastructure\Request\GetCompanyBySlugDto;
 use App\Shared\Application\Query\QueryBus;
-use App\Shared\Infrastructure\Security\RoutePermission;
 use App\Shared\Infrastructure\Service\ResponseService;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\Routing\Attribute\Route;
-use Symfony\Component\Routing\Requirement\Requirement;
 
-#[Route('/api/companies/{company_id}', requirements: ['company_id' => Requirement::UUID_V4], methods: ['GET'])]
-class GetCompanyByIdController
+#[Route('/api/companies/{slug}', methods: ['GET'])]
+class GetCompanyBySlugController
 {
     public function __construct(
         private QueryBus $queryBus,
@@ -23,10 +24,10 @@ class GetCompanyByIdController
     ) {
     }
 
-    public function __invoke(GetCompanyByIdDto $request): JsonResponse
+    public function __invoke(GetCompanyBySlugDto $request): JsonResponse
     {
-        /** @var GetCompanyByIdQueryResult $queryResult */
-        $queryResult = $this->queryBus->query(new GetCompanyByIdQuery($request->companyId));
+        /** @var GetCompanyBySlugQueryResult $queryResult */
+        $queryResult = $this->queryBus->query(new GetCompanyBySlugQuery($request->slug));
 
         return $this->jsonResponseService->ok($queryResult->getCompany());
     }
